target_sources(blinker
  PRIVATE
    main.cpp
    objects.cpp
    BlinkerSystem.cpp
)

target_include_directories(blinker
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(blinker
  PRIVATE
    crt
    objects
    system
    irq
    uart
    flasher
    logger
    scb
    flash
    gpio
    pwr
    rcc
    systick
    nvic
    uart
    tinyusb
    otg_fs
)
