target_sources(os_app
  PRIVATE
    main.cpp
    objects.cpp
    OsSystem.cpp
)

target_include_directories(os_app
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(os_app
  PRIVATE
    crt
    objects
    system
    irq
    uart
    flasher
    logger
    scb
    flash
    gpio
    pwr
    rcc
    systick
    nvic
    uart
    os
)
